# adjustment

./: :w  ;  Cargo.toml  Makefile  README.md
.github/: CODEOWNERS  dependabot.yml
common/: Cargo.toml
common/src/: bitcoin.rs  currency.rs  lib.rs
common/src/currency/: code.rs  name.rs  symbol.rs
domain/: Cargo.toml
domain/src/currency/: symbol.rs
macros/: Cargo.toml  Cargo.toml-e
macros/src/: lib.rs
scripts/: bump.sh  goodbye.sh  install-tooling.sh  pre-commit.sh  pre-push.sh  release-manager.sh  tooling.sh  update-release-version.sh  visual.sh
scripts/text/: exit.sh  positivity.sh
shared/: Cargo.toml
shared/src/utils/: bitcoin.rs  currency.rs  mod.rs
shared/src/utils/currency/: code.rs  name.rs  symbol.rs
src/: main.rs
traits/: Cargo.toml
traits/src/: errors.rs  json.rs  lib.rs
traits/src/errors/: message.rs  meta.rs
utils/: Cargo.toml  Cargo.toml-e
utils/src/: async_tools.rs  datetime.rs  errors.rs  http.rs  json.rs  lib.rs  sync.rs  time.rs  uuid.rs
utils/src/adapters/: http_client.rs
utils/src/adapters/http_client/: headers.rs  helpers.rs  request.rs  response.rs  url.rs
utils/src/datetime/: date.rs  helpers.rs  primatives.rs  time.rs  timer.rs
utils/src/errors/: codes.rs
utils/src/http/: helpers.rs  request.rs  response.rs  url.rs
